[FEAT] Add settings API
